Add task formos atnaujinimai ir nauju uzduociu atvaizdavimas

--- a/index.html
+++ b/index.html
@@ -22,18 +22,21 @@
 
                 <!-- TODO Item form -->
                 <div class="mt-5">
-                    <form action="" method="GET">
+                    <form id="task_form" action="" method="GET">
                         <div class="row">
                             <div class="col-10">
                                 <!-- Dokumentacija: https://getbootstrap.com/docs/5.2/forms/form-control/ -->
                                 <input type="text" 
                                 name="task_name"
+                                id="task_name"
                                 class="form-control form-control-lg" 
                                 placeholder="What do you need to do?">
                             </div>
                             <div class="col-2">
                                 <!-- Dokumentacija: https://getbootstrap.com/docs/5.2/components/buttons/ -->
-                                <input type="submit" class="btn btn-primary btn-lg w-100" value="Add">
+                                <input type="submit"
+                                id="add_task"
+                                class="btn btn-primary btn-lg w-100" value="Add">
 
                             </div>
                         </div>
@@ -45,19 +48,13 @@
                 <!-- END TODO item form -->
 
                 <!-- TODO Items list -->
-                <ul class="list-group mt-3 list-group-flush">
+                <ul id="task_list" class="list-group mt-3 list-group-flush">
+                    <!-- 
                     <li class="list-group-item">
                       <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
                       <label class="form-check-label" for="firstCheckbox">First checkbox</label>
                     </li>
-                    <li class="list-group-item">
-                      <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
-                      <label class="form-check-label" for="secondCheckbox">Second checkbox</label>
-                    </li>
-                    <li class="list-group-item">
-                      <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
-                      <label class="form-check-label" for="thirdCheckbox">Third checkbox</label>
-                    </li>
+                    -->
                   </ul>
                 <!-- END TODO Items list -->
             </div>
@@ -71,6 +68,6 @@
     <!--  Boostrap (v5) JS pridėjimas iš CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
-    <script src="js/main.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
