--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>TODO App</title>
     <!-- Boostrap (v5) Biblioteką - CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="css/jquery.growl.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -29,6 +30,7 @@
                                 <input type="text" 
                                 name="task_name"
                                 id="task_name"
+                                required
                                 class="form-control form-control-lg" 
                                 placeholder="What do you need to do?">
                             </div>
@@ -67,6 +69,8 @@
 
     <!--  Boostrap (v5) JS pridėjimas iš CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
+    <script src="js/jquery.growl.js"></script>
 
     <script src="js/script.js"></script>
 </body>
